# divizion

./: .clang-format  INSTALL.md  README.md  cross-i686-mingw32.ini  meson.build  meson_options.txt
src/: const.cpp  const.hpp  divizion.cpp  divizion.hpp  divizion_state.hpp  file_dialog.cpp  file_dialog.hpp  furnace_gui_utils.cpp  furnace_gui_utils.hpp  furnace_macro_def.hpp  furnace_widgets.cpp  furnace_widgets.hpp  gui.cpp  gui.hpp  gui_draw_macros.cpp  gui_images.hpp  gui_process_drags.cpp  gui_process_drags.hpp  gui_render_list_item.cpp  impl_actions.cpp  impl_actions.hpp  impl_actions_draw_chan_info.cpp  impl_actions_draw_chip_info.cpp  impl_actions_draw_instr_info.cpp  impl_actions_sys_categories.cpp  impl_actions_sys_categories.hpp  interface_actions.hpp  mml.cpp  mml.hpp  plot_nolerp.cpp  plot_nolerp.hpp  regView.cpp  res.h  res.rc  text_input_widget.cpp  text_input_widget.hpp  vst_dispatch.cpp  vst_output.cpp  vst_params.cpp  vst_process_events.cpp  (+1 more)
src/_/: divizion_state.cpp
src/mock/: mock.cpp  mock.hpp
src/standalone/: divizion.def  main.cpp
src/vst2/: dispatch.cpp  divizion.cpp  entry.cpp  handle_ui.cpp  io.cpp  output.cpp  process.cpp  vst.hpp
subprojects/: furnace.wrap  sdl2.wrap
subprojects/igfd/: ImGuiFileDialog.cpp  meson.build
subprojects/igfd/tildearrow/: ta-log.h
subprojects/imgui_patched/: MODIFIED.md  imgui.cpp  meson.build
subprojects/imgui_software_renderer/: meson.build
subprojects/packagefiles/furnace/: CMakeLists.txt
subprojects/packagefiles/furnace/src/engine/: engine.h
